Fix overflow

--- a/app/src/main/resources/webassets/index.css
+++ b/app/src/main/resources/webassets/index.css
@@ -73,6 +73,7 @@ main {
     position: fixed;
     right: 0px;
     margin-right: 15px;
+    overflow-y: auto;
 }
 
 .qotd-config {
